--- a/wp-content/themes/expert-massage/views/includes/modules/content/specialists.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/specialists.pug
@@ -1,4 +1,10 @@
-- var specialists = globalData.company.specialists
+-
+  var specialists = [
+    globalData.company.specialists[3],
+    globalData.company.specialists[2],
+    globalData.company.specialists[0],
+    globalData.company.specialists[1]
+  ]
 
 section.specialists
   .container
