--- a/wp-content/themes/expert-massage/views/pages/anti-cellulite-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/anti-cellulite-massage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Массаж от целлюлита - антицеллюлитный массаж в Москве, отличная цена от профессионального массажиста
       с медицинской лицензией`
     pageData.keywords = `антицеллюлитный, массаж, услуга, описание, от целлюлита, Москва, цена`
-    pageData.canonical = 'https://expert-massage-clinic.ru/anti-cellulite-massage/'
     pageData.pageClass = 'anti-cellulite-massage-page'
     pageData.theme = '9'
     pageData.massage = globalData.massages['anti-cellulite-massage']
@@ -124,6 +123,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
