--- a/wp-content/themes/expert-massage/views/pages/body-lymphatic-drainage.pug
+++ b/wp-content/themes/expert-massage/views/pages/body-lymphatic-drainage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Массаж лимфодренажный в Москве, отличная цена, положительные отзывы. Лечебный лимфодренажный массаж
       от профессионального массажиста.`
     pageData.keywords = `лимфодренажный, массаж, услуга, описание, цена, стоимость, Москва`
-    pageData.canonical = 'https://expert-massage-clinic.ru/body-lymphatic-drainage/'
     pageData.pageClass = 'body-lymphatic-drainage-page'
     pageData.theme = '8'
     pageData.massage = globalData.massages['body-lymphatic-drainage']
@@ -145,6 +144,7 @@ block content
   include ../includes/modules/content/indications
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
