--- a/wp-content/themes/expert-massage/views/pages/chiromassage.pug
+++ b/wp-content/themes/expert-massage/views/pages/chiromassage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Хиромассаж - сочетание европейской техники и восточных приёмов для наилучшего эффекта для мышц и
       кожи лица. Москва - отличная цена и профессиональный подход`
     pageData.keywords = `хиромассаж, массаж лица, Москва, услуга, описание, цена, стоимость`
-    pageData.canonical = 'https://expert-massage-clinic.ru/chiromassage/'
     pageData.pageClass = 'chiromassage-page'
     pageData.theme = '5'
     pageData.massage = globalData.massages['chiromassage']
@@ -110,6 +109,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
