--- a/wp-content/themes/expert-massage/views/pages/classic-facial-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/classic-facial-massage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Классический массаж лица, Москва - ${globalData.company.businessDuration} лет успешной работы!
       Профессиональная методика, лучшие цены`
     pageData.keywords = `классический массаж лица, Москва, услуга, описание, цена, стоимость`
-    pageData.canonical = 'https://expert-massage-clinic.ru/classic-facial-massage/'
     pageData.pageClass = 'classic-facial-massage-page'
     pageData.theme = '2'
     pageData.massage = globalData.massages['classic-facial-massage']
@@ -105,6 +104,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
