--- a/wp-content/themes/expert-massage/views/pages/facial-lymphatic-drainage.pug
+++ b/wp-content/themes/expert-massage/views/pages/facial-lymphatic-drainage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Лимфодренажный массаж лица - прорабатывается лицо, шея и зона декольте, эффект заметен после первой
       процедуры`
     pageData.keywords = `лимфодренажный, массаж лица, услуга, описание, цена, стоимость, Москва`
-    pageData.canonical = 'https://expert-massage-clinic.ru/facial-lymphatic-drainage/'
     pageData.pageClass = 'facial-lymphatic-drainage-page'
     pageData.theme = '3'
     pageData.massage = globalData.massages['facial-lymphatic-drainage']
@@ -103,6 +102,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
