--- a/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
+++ b/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Ручное моделирование фигуры - профессиональный массаж в Москве, отличная цена от профессионального
       массажиста с медицинской лицензией`
     pageData.keywords = `моделирование, фигуры, ручное, массаж, услуга, описание, от целлюлита, Москва, цена`
-    pageData.canonical = 'https://expert-massage-clinic.ru/figure-modeling/'
     pageData.pageClass = 'figure-modeling-page'
     pageData.theme = '7'
     pageData.massage = globalData.massages['figure-modeling']
@@ -146,6 +145,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
