--- a/wp-content/themes/expert-massage/views/pages/fullbody-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/fullbody-massage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Массаж всего тела - общий классический массаж в Москве, ощутимый оздоровительный эффект, приятная
       стоимость`
     pageData.keywords = `общий, массаж, услуга, описание, цена, стоимость, Москва`
-    pageData.canonical = 'https://expert-massage-clinic.ru/fullbody-massage/'
     pageData.pageClass = 'fullbody-massage-page'
     pageData.theme = '11'
     pageData.massage = globalData.massages['fullbody-massage']
@@ -39,7 +38,7 @@ block variables
         ]
       }
     ]
-    pageData.reviewsBlock.title = 'Отзывы об&nbsp;общем массаже'
+    pageData.reviewsBlock.title = 'Отзывы о нас'
     pageData.massageVideo = {
       id: 'lmt72qq1too',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_fullbody.jpg`,
@@ -118,6 +117,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
