--- a/wp-content/themes/expert-massage/views/pages/japanese-asahi-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/japanese-asahi-massage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Массаж по японской методике Асахи (zogan) - "создание лица". Москва, отличная цена и
       квалифицированные массажисты`
     pageData.keywords = `японский массаж, Асахи, Зоган, asahi, zogan, массаж лица, Москва, услуга, описание, цена, стоимость`
-    pageData.canonical = 'https://expert-massage-clinic.ru/japanese-asahi-massage/'
     pageData.pageClass = 'japanese-asahi-massage-page'
     pageData.theme = '4'
     pageData.massage = globalData.massages['japanese-asahi-massage']
@@ -112,6 +111,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
