--- a/wp-content/themes/expert-massage/views/pages/neck-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/neck-massage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Массаж воротниковой зоны, массаж шеи от профессионального массажиста. Массаж шеи при остеохондрозе,
       медицинская лицензия.`
     pageData.keywords = `массаж, шейно-воротниковой, описание, услуга, цена, стоимость, Москва`
-    pageData.canonical = 'https://expert-massage-clinic.ru/neck-massage/'
     pageData.pageClass = 'neck-massage-page'
     pageData.theme = '10'
     pageData.massage = globalData.massages['neck-massage']
@@ -99,6 +98,7 @@ block content
   include ../includes/modules/content/features-list
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
