--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/reusable/pagination.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/reusable/pagination.scss
@@ -1,26 +1,19 @@
 @use '../../tools' as *;
 
 .pagination {
-  &__pages {
-    @include horizontal-list();
+  margin-top: 4rem;
 
-    margin-top: 4rem;
+  text-align: center;
 
-    text-align: center;
-  }
-
-  &__page {
-    margin: 0 1rem;
-  }
-
-  &__page-link {
-    @include box(4.5rem);
+  .page-numbers {
+    @include box(3rem);
 
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    margin: 0 0.3rem;
 
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     vertical-align: middle;
     color: $default-color;
 
@@ -35,8 +28,41 @@
       background-color: map-deep-get($themes, 'main', 'primary-x-transparent');
     }
 
-    &[data-active] {
+    &.current {
       box-shadow: inset 0 0 0.3rem $default-color;
+    }
+  }
+
+  .dots {
+    width: auto;
+
+    background: none;
+    cursor: default;
+
+    @include in-focus() {
+      background: none;
+    }
+  }
+}
+
+@media (min-width: $tablet-min-width) {
+  .pagination {
+    .page-numbers {
+      @include box(3.6rem);
+
+      margin: 0 1rem;
+
+      font-size: 1.6rem;
+    }
+  }
+}
+
+@media (min-width: $s-desktop-min-width) {
+  .pagination {
+    .page-numbers {
+      @include box(4.2rem);
+
+      font-size: 1.8rem;
     }
   }
 }
