--- a/wp-content/themes/expert-massage/views/includes/modules/content/certificate.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/certificate.pug
@@ -1,26 +1,40 @@
+- var imageName = 'certificate-face'
+case pageData.theme
+  when 'main'
+    - imageName = 'certificate-all'
+  when '6'
+  when '10'
+  when '11'
+  when '12'
+    - imageName = 'certificate-body'
+  when '7'
+  when '8'
+  when '9'
+    - imageName = 'certificate-figure'
+
 -
   var certificatePicture = {
     desktop: {
       webp: {
-        '1x': `${THEME_IMG_PATH}/certificate/certificate_desktop@1x.webp`,
-        '2x': `${THEME_IMG_PATH}/certificate/certificate_desktop@2x.webp`
+        '1x': `${THEME_IMG_PATH}/certificate/${imageName}_desktop@1x.webp`,
+        '2x': `${THEME_IMG_PATH}/certificate/${imageName}_desktop@2x.webp`
       },
       png: {
-        '1x': `${THEME_IMG_PATH}/certificate/certificate_desktop@1x.png`,
-        '2x': `${THEME_IMG_PATH}/certificate/certificate_desktop@2x.png`
+        '1x': `${THEME_IMG_PATH}/certificate/${imageName}_desktop@1x.png`,
+        '2x': `${THEME_IMG_PATH}/certificate/${imageName}_desktop@2x.png`
       }
     },
     tablet: false,
     mobile: {
       webp: {
-        '1x': `${THEME_IMG_PATH}/certificate/certificate_mobile@1x.webp`,
-        '2x': `${THEME_IMG_PATH}/certificate/certificate_mobile@2x.webp`,
-        '3x': `${THEME_IMG_PATH}/certificate/certificate_mobile@3x.webp`
+        '1x': `${THEME_IMG_PATH}/certificate/${imageName}_mobile@1x.webp`,
+        '2x': `${THEME_IMG_PATH}/certificate/${imageName}_mobile@2x.webp`,
+        '3x': `${THEME_IMG_PATH}/certificate/${imageName}_mobile@3x.webp`
       },
       png: {
-        '1x': `${THEME_IMG_PATH}/certificate/certificate_mobile@1x.png`,
-        '2x': `${THEME_IMG_PATH}/certificate/certificate_mobile@2x.png`,
-        '3x': `${THEME_IMG_PATH}/certificate/certificate_mobile@3x.png`
+        '1x': `${THEME_IMG_PATH}/certificate/${imageName}_mobile@1x.png`,
+        '2x': `${THEME_IMG_PATH}/certificate/${imageName}_mobile@2x.png`,
+        '3x': `${THEME_IMG_PATH}/certificate/${imageName}_mobile@3x.png`
       }
     }
   }
