--- a/wp-content/themes/expert-massage/views/includes/modules/content/price-list/price-list.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/price-list/price-list.pug
@@ -60,12 +60,12 @@ section.price-list
                   td.table__cell
                     b.price-list__massage-name= massage.name
                   td.table__cell
-                    if (massage.price.old) && (massage === pageData.massage)
+                    if massage.price.old
                       span.price-list__old-price!= `${massage.price.old}&thinsp;₽`
                       br
                     span.price-list__first-price!= `${massage.price.first}&thinsp;₽`
                   td.table__cell
-                    if (massage.price.old) && (massage === pageData.massage)
+                    if massage.price.old
                       span.price-list__old-price!= `${massage.price.old}&thinsp;₽`
                       br
                     span.price-list__standard-price!= `${massage.price.standard}&thinsp;₽`
