--- a/wp-content/themes/expert-massage/views/includes/modules/head/head.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/head/head.pug
@@ -7,8 +7,8 @@ meta(http-equiv='X-UA-Compatible' content='IE=edge')
 meta(name="yandex-verification" content="8085584c20aa6a13")
 link(rel='manifest' href=`${THEME_DIST_PATH}/site.webmanifest`)
 include favicons
-if pageData.canonical
-  link(rel='canonical' href=pageData.canonical)
+if globalData.canonical
+  link(rel='canonical' href=globalData.canonical)
 if pageData.hasMap
   script(src="https://api-maps.yandex.ru/2.1/?apikey=b176543a-340b-4de9-9ded-9037e167250b&lang=ru_RU")
 - wp_head()
