--- a/wp-content/themes/expert-massage/views/pages/sculptural-buccal-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/sculptural-buccal-massage.pug
@@ -7,7 +7,6 @@ block variables
     pageData.description = `Скульптурно-буккальный массаж&nbsp;— процедура, сравнимая по&nbsp;эффекту с&nbsp;пластикой.
       Результат заметен после первого сеанса`
     pageData.keywords = `скульптурно-буккальный, массаж лица, Москва, услуга, описание, цена, стоимость`
-    pageData.canonical = 'https://expert-massage-clinic.ru/sculptural-buccal-massage/'
     pageData.pageClass = 'sculptural-buccal-massage-page'
     pageData.theme = '1'
     pageData.massage = globalData.massages['sculptural-buccal-massage']
@@ -119,6 +118,7 @@ block content
   include ../includes/modules/content/massage-description
   include ../includes/modules/content/faq
   include ../includes/modules/content/price-list/price-list
+  include ../includes/modules/content/certificate
   include ../includes/modules/content/more-massages
   include ../includes/modules/content/socials
   include ../includes/modules/footer/map-block
