Change signature. Fix missing full name output

--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/about-page/about-page.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/about-page/about-page.scss
@@ -23,6 +23,10 @@
     margin-bottom: 10rem;
   }
 
+  &__blockquote {
+    background-color: #f3f9fe;
+  }
+
   &__highlight-card {
     margin-bottom: 7rem;
     padding: 3rem;
