--- a/wp-content/themes/expert-massage/views/includes/modules/content/famous-clients.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/famous-clients.pug
@@ -148,6 +148,7 @@
     }
   ]
 
+//- TODO To enable this block remove hidden class
 section.famous-clients
   .famous-clients__content.container
     h2.famous-clients__title.heading Нам доверяют
