--- a/wp-content/themes/expert-massage/views/pages/anti-cellulite-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/anti-cellulite-massage.pug
@@ -45,7 +45,7 @@ block variables
     }
     pageData.reviewsBlock.title = 'Отзывы об&nbsp;антицеллюлитном массаже'
     pageData.massageVideo = {
-      id: 'q6TCTNKIU4M',
+      id: 'ejIPT_u7wr8',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_anticellulite.jpg`,
       sticker: false
     }
