--- a/wp-content/themes/expert-massage/views/pages/back-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/back-massage.pug
@@ -41,7 +41,7 @@ block variables
     }
     pageData.reviewsBlock.title = 'Отзывы о лечебном массаже спины'
     pageData.massageVideo = {
-      id: '_0KHvR5FSXs',
+      id: 'WzRZGD0mzkY',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_back.jpg`,
       sticker: {
         position: 'left',
