--- a/wp-content/themes/expert-massage/views/pages/body-lymphatic-drainage.pug
+++ b/wp-content/themes/expert-massage/views/pages/body-lymphatic-drainage.pug
@@ -53,7 +53,7 @@ block variables
     ]
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;лимфодренажном массаже'
     pageData.massageVideo = {
-      id: '6NFFW_ibDhc',
+      id: 'TKXj_pg4KNc',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_lymphatic-drainage.jpg`,
       sticker: {
         position: 'right',
