--- a/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
+++ b/wp-content/themes/expert-massage/views/pages/figure-modeling.pug
@@ -59,7 +59,7 @@ block variables
     }
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;ручном моделировании фигуры'
     pageData.massageVideo = {
-      id: 'y8nZNDosExU',
+      id: 'dYomA1yVJUM',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_figure-modeling.jpg`,
       sticker: false
     }
