--- a/wp-content/themes/expert-massage/views/pages/fullbody-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/fullbody-massage.pug
@@ -39,7 +39,7 @@ block variables
     ]
     pageData.reviewsBlock.title = 'Отзывы о нас'
     pageData.massageVideo = {
-      id: 'lmt72qq1too',
+      id: 'dmnNYQh31Ng',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_fullbody.jpg`,
       sticker: {
         position: 'left',
