--- a/wp-content/themes/expert-massage/views/pages/neck-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/neck-massage.pug
@@ -38,7 +38,7 @@ block variables
     ]
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;нас'
     pageData.massageVideo = {
-      id: 'YM_MU5ZTGVI',
+      id: 'mj12083KWJ4',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_all.jpg`,
       sticker: {
         position: 'left',
