--- a/wp-content/themes/expert-massage/views/pages/sports-massage.pug
+++ b/wp-content/themes/expert-massage/views/pages/sports-massage.pug
@@ -42,7 +42,7 @@ block variables
     ]
     pageData.reviewsBlock.title = 'Отзывы о нас'
     pageData.massageVideo = {
-      id: 'YM_MU5ZTGVI',
+      id: 'i84FZv3CZss',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_all.jpg`,
       sticker: {
         position: 'left',
