--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/reviews-page/reviews-filters.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/reviews-page/reviews-filters.scss
@@ -1,21 +1,25 @@
 @use '../../tools' as *;
 
 .reviews-filters {
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
+
+  text-align: center;
 
   &__list {
-    @include horizontal-list();
-  }
+    @include reset-list();
 
-  &__list-item {
-    margin-right: 1.5rem;
-    margin-bottom: 2rem;
+    display: flex;
+    overflow: scroll;
+    padding-top: 1.5rem;
+    padding-left: 2rem;
+
+    white-space: nowrap;
   }
 
   &__filter {
     @include reset-button();
 
-    padding: 1.2rem 2.5rem;
+    padding: 0.9rem 1.5rem;
 
     font-size: 1.6rem;
 
@@ -26,6 +30,11 @@
 
     &[data-active] {
       background-color: map-deep-get($themes, 'main', 'primary-x-transparent');
+
+      &:focus {
+        box-shadow: 0 0 1rem $light-dim-color;
+        outline: none;
+      }
     }
 
     &:not([data-active]) {
@@ -34,17 +43,39 @@
       }
     }
   }
-}
 
-@media (min-width: $phone-landscape-min-width) {
-  .reviews-filters {
-    text-align: center;
+  &__list-item {
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+
+    &:last-of-type {
+      .reviews-filters__filter {
+        margin-right: 2rem;
+      }
+    }
   }
 }
 
 @media (min-width: $s-desktop-min-width) {
   .reviews-filters {
-    margin-top: 6rem;
+    margin-top: 4rem;
     margin-bottom: 6rem;
+
+    &__list {
+      @include horizontal-list();
+
+      display: block;
+      overflow: auto;
+      padding-top: 2rem;
+    }
+
+    &__list-item {
+      margin-right: 1.5rem;
+      margin-bottom: 2rem;
+    }
+
+    &__filter {
+      padding: 1rem 2.2rem;
+    }
   }
 }
