--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/reviews-page/reviews.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/reviews-page/reviews.scss
@@ -21,16 +21,15 @@
 @media (min-width: $tablet-min-width) {
   .reviews {
     &__wrap {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      max-width: initial;
+      max-width: 88rem;
     }
 
     .review-card {
       max-width: 40rem;
       width: 45%;
-      margin-bottom: 4.5rem;
+      margin-right: 2.5%;
+      margin-bottom: 5rem;
+      margin-left: 2.5%;
       padding: 3rem 2.5rem;
       padding-bottom: 4rem;
     }
@@ -39,8 +38,14 @@
 
 @media (min-width: $s-desktop-min-width) {
   .reviews {
+    &__wrap {
+      max-width: 116rem;
+    }
+
     .review-card {
       width: 30%;
+      margin-right: 1.5%;
+      margin-left: 1.5%;
     }
   }
 }
