--- a/wp-content/themes/expert-massage/views/includes/modules/content/video-reviews.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/video-reviews.pug
@@ -56,6 +56,7 @@
     }
   ]
 
+//- TODO To enable this block remove hidden class
 section.video-reviews
   .video-reviews__content.container(data-aos='fade-up' data-aos-offset='50' data-aos-duration='800' data-aos-anchor-placement='top-bottom')
     h2.video-reviews__title.heading Видеоотзывы наших клиентов
