--- a/wp-content/themes/expert-massage/views/includes/modules/header/main-menu.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/header/main-menu.pug
@@ -28,11 +28,11 @@ mixin submenu-list(type, i)
   ul.submenu__list
     li.submenu__list-item
       h3.submenu__list-heading= type
-    each section in globalData.priceList.sections
+    each section, sectionName in globalData.priceList.sections
       each massage in section.massages
-        if ((i === 0) && (massage.type === '2')) || ((i === 1) && (massage.type === '1')) || ((i === 2) && (massage.type === '3'))
+        if ((i === 0) && (massage.type === '2')) || ((i === 1) && (massage.type === '1')) || ((i === 2) && (massage.type === '3') && (sectionName === 'figure'))
           +submenu-item(massage)
-        if (massage.id === '8') && (i === 0)
+        if (massage.id === '8') && (i === 0) && (sectionName === 'body')
           +submenu-item(massage)
 
 mixin submenu-item(massage)
