--- a/wp-content/themes/expert-massage/views/pages/chiromassage.pug
+++ b/wp-content/themes/expert-massage/views/pages/chiromassage.pug
@@ -46,7 +46,7 @@ block variables
     }
     pageData.reviewsBlock.title = 'Отзывы о&nbsp;массаже лица'
     pageData.massageVideo = {
-      id: 'H9IRW0ffpWk',
+      id: 'AA3ZmQWmKX8',
       poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_face.jpg`,
       sticker: false
     }
